@@ -1,3 +1,7 @@
+2018-04-19  Michael Guravage  <guravage@weddell.itf.cwi.nl>
+
+	* test_mordac.py (MordacLinkViewIntegrationTest): Added Mordac Link View tests.
+
 2017-03-24  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
 	* test_mordac.py: Removed local_role.
